// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card components matches snapshot for Card component 1`] = `
<DocumentFragment>
  <div
    class="rounded-xl border bg-card text-card-foreground shadow"
  />
</DocumentFragment>
`;

exports[`Card components matches snapshot for CardContent component 1`] = `
<DocumentFragment>
  <div
    class="p-6 pt-0"
  />
</DocumentFragment>
`;

exports[`Card components matches snapshot for CardDescription component 1`] = `
<DocumentFragment>
  <div
    class="text-sm text-muted-foreground"
  />
</DocumentFragment>
`;

exports[`Card components matches snapshot for CardFooter component 1`] = `
<DocumentFragment>
  <div
    class="flex items-center p-6 pt-0"
  />
</DocumentFragment>
`;

exports[`Card components matches snapshot for CardHeader component 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col space-y-1.5 p-6"
  />
</DocumentFragment>
`;

exports[`Card components matches snapshot for CardTitle component 1`] = `
<DocumentFragment>
  <div
    class="font-semibold leading-none tracking-tight"
  />
</DocumentFragment>
`;
